<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item-->
        <!--android:id="@+id/action_settings"-->
        <!--android:orderInCategory="200"-->
        <!--android:title="@string/action_settings"-->
        <!--app:showAsAction="never" />-->
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="always"
        android:icon="@mipmap/share">
        <menu>
        <item
            android:id="@+id/action_share_fb"
            android:orderInCategory="100"
            android:title="@string/action_sharefb"
            app:showAsAction="ifRoom"
            android:icon="@mipmap/ic_facebook"/>
            <item
            android:id="@+id/action_share_gp"
            android:orderInCategory="100"
            android:title="@string/action_shareGP"
            app:showAsAction="ifRoom"
            android:icon="@mipmap/ic_google_p"/>
        </menu>
    </item>

</menu>
