<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/requestSongContainer"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:text="@string/Select_show_program_requestSong">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="?attr/dropdownListPreferredItemHeight"
            android:id="@+id/spinner_requestsong_prograList"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:text="@string/Select_show_program_requestSong"
            android:layout_margin="10dp"
            android:popupElevation="3dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <EditText
                android:id="@+id/EDrequestsong_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:inputType="textAutoComplete"
                android:singleLine="true"
                android:hint="@string/yourName_requestSong" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

        <EditText
            android:id="@+id/requestsong_EDemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:inputType="textEmailAddress"
            android:hint="@string/yourEmail_requestSong" />
    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_requestBy"
            android:layout_width="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <EditText
                android:id="@+id/requestsong_EDrequestBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:inputType="textAutoComplete"
                android:hint="@string/requestBy_requestSong" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_requestTO"
            android:layout_width="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <EditText
                android:id="@+id/requestsong_EDrequestTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:inputType="textAutoComplete"
                android:hint="@string/requestTo_requestSong" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_yourRequest"
            android:layout_width="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <EditText
                android:id="@+id/input_yourRequest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:inputType="textMultiLine"
                android:ems="10"
                android:hint="@string/yourRequest_requestSong" />
        </android.support.design.widget.TextInputLayout>


        <com.andexert.library.RippleView
            android:id="@+id/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/more2"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            rv_centered="true">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Submit_requestSong"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:layout_gravity="center"
                android:background="@drawable/button_submit_song_request"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="requestSongSubmitButtonClick"
                android:id="@+id/button" />
            </com.andexert.library.RippleView>

    </LinearLayout>


</ScrollView>